--- a/resume.html
+++ b/resume.html
@@ -21,10 +21,10 @@
         </div>
         <div class="ima">
             <img src="./img/WhatsApp Image 2024-03-19 at 13.40.45_052b2473.jpg" alt="blank">
-            <i class="fa-brands fa-github icon"></i><a href="https://github.com/Pralhad05/PralhadG">Git-Hub</a>
-            <i class="fa-brands fa-square-instagram icon"></i><a href="#">Instagram</a>
+            <i class="fa-brands fa-github icon"></i><a href="https://github.com/dashboard">Git-Hub</a>
+            <i class="fa-brands fa-square-instagram icon"></i><a href="https://www.instagram.com/pralhad952?igsh=MTRndWFiMzlmeHFnNw==">Instagram</a>
             <i class="fa-brands fa-linkedin icon"></i><a
-                href="https://www.linkedin.com/in/gaikwad-pralhad-77b09922a/">Linked In</a>
+                href="https://www.linkedin.com/in/gaikwad-pralhad-902271pg/">Linked In</a>
 
         </div>
         <div>
