--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <div class="containerm">
         <header class="header-area">
             <div class="logo">
-                <a href="./portfolio.html"><img src="./img/Designer.png" alt="Logo"></a>
+                <a href="./index.html"><img src="./img/Designer.png" alt="Logo"></a>
             </div>
             <nav class="navbar">
                 <ul class="nav-list">
-                    <li><a href="./portfolio.html">HOME</a></li>
+                    <li><a href="./index.html">HOME</a></li>
                     <li><a href="#education">EDUCATION</a></li>
                     <li><a href="#skills">SKILL</a></li>
                     <li><a href="#photos">PHOTOS</a></li>
@@ -73,7 +73,7 @@
                         <div class="left_box">
                             <br>
                             <h3>Website</h3>
-                            <p>www.profile.com</p>
+                            <p>https://pralhadportfolio.netlify.app/</p>
                         </div>
                     </div>
                 </div>
@@ -83,14 +83,15 @@
                     </div>
                     <div class="right_bottom">
                         <div class="icon">
-                            <a href="http://www.facebook.com" target="_blank" rel="noopener noreferrer"><i
+                            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i
                                     class="fa-brands fa-facebook ic"></i></a>
-                            <a href="http://" target="_blank" rel="noopener noreferrer"><i
+                            <a href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer"><i
                                     class="fa-brands fa-twitter ic"></i></a>
-                            <a id="ins" href="http://" target="_blank" rel="noopener noreferrer"><i
+                            <a id="ins" href="https://www.instagram.com/pralhad952?igsh=MTRndWFiMzlmeHFnNw=="
+                                target="_blank" rel="noopener noreferrer"><i
                                     class="fa-brands fa-square-instagram ic"></i></a>
-                            <a href="http://" target="_blank" rel="noopener noreferrer"><i
-                                    class="fa-brands fa-linkedin ic"></i></a>
+                            <a href="https://www.linkedin.com/in/gaikwad-pralhad-902271pg/" target="_blank"
+                                rel="noopener noreferrer"><i class="fa-brands fa-linkedin ic"></i></a>
                         </div>
                     </div>
                 </div>
@@ -191,7 +192,7 @@
         </section>
 
         <section id="photos" class="section">
-            <br><br> 
+            <br><br>
             <h2>Photos</h2>
             <div class="main_IMG">
                 <div class="mycontainer">
@@ -260,14 +261,15 @@
                     <p>https://github.com/Pralhad05/PralhadG.git</p>
 
                     <div class="icon">
-                        <a href="http://www.facebook.com" target="_blank" rel="noopener noreferrer"><i
+                        <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i
                                 class="fa-brands fa-facebook ic"></i></a>
-                        <a href="http://" target="_blank" rel="noopener noreferrer"><i
+                        <a href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer"><i
                                 class="fa-brands fa-twitter ic"></i></a>
-                        <a id="ins" href="http://" target="_blank" rel="noopener noreferrer"><i
+                        <a id="ins" href="https://www.instagram.com/pralhad952?igsh=MTRndWFiMzlmeHFnNw=="
+                            target="_blank" rel="noopener noreferrer"><i
                                 class="fa-brands fa-square-instagram ic"></i></a>
-                        <a href="http://" target="_blank" rel="noopener noreferrer"><i
-                                class="fa-brands fa-linkedin ic"></i></a>
+                        <a href="https://www.linkedin.com/in/gaikwad-pralhad-902271pg/" target="_blank"
+                            rel="noopener noreferrer"><i class="fa-brands fa-linkedin ic"></i></a>
                     </div>
                 </div>
             </div>
